<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/refreshText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_time"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/refreshText"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_below="@id/timePicker"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <!-- Dark Mode Toggle -->
    <ToggleButton
        android:id="@+id/darkModeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/darkMode"
        android:text="@string/dark_mode"
        android:layout_marginTop="16dp" />

    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@id/darkModeToggle"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/backButton"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
