<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:visibility="gone"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <!-- Move observationDisplay above separationText -->
        <TextView
            android:id="@+id/observationDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationDisplay"
            android:layout_marginTop="16dp"
            android:text="@string/observation"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/separationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/observationDisplay"
            android:layout_marginTop="16dp"
            android:text="@string/separation"
            android:textSize="18sp" />

        <!-- Move forecastDisplay below separationText -->
        <TextView
            android:id="@+id/forecastDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separationText"
            android:layout_marginTop="16dp"
            android:text="@string/forecast"
            android:textSize="18sp" />

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forecastDisplay"
            android:layout_marginTop="16dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forecastDisplay"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:text="@string/next" />

    </RelativeLayout>
</ScrollView>
