<?xml version="1.0" encoding="utf-8"?>
<!-- Benson Mugure: S2038770 -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="7dp"
            android:background="@drawable/border_black">

            <LinearLayout
                android:id="@+id/locationHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/settingsButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/home"
                    android:layout_marginEnd="90dp"
                    android:contentDescription="@string/gear" />

                <TextView
                    android:id="@+id/locationDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Help"
                    android:textSize="20sp" />

            </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="7dp"
            android:layout_below="@id/locationHost"
            android:background="@drawable/border_black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text"
                    android:textSize="16sp" />

        </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>